K8s/base/email/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: emailservice
  labels:
    app: emailservice
    app.kubernetes.io/part-of: opentelemetry-demo
spec:
  type: ClusterIP
  selector:
    app: emailservice
  ports:
    - name: tcp-service
      port: 8080
      targetPort: 8080
